core/src/main/java/com/example/core/errors/exception/ScheduleServiceException.java
package com.example.core.errors.exception;

public class ScheduleServiceException extends RuntimeException {
  public ScheduleServiceException(String message) {
    super(message);
  }
}
